# Quickpulsev2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  QUICKPULSE_V2_PLAN.md  conf.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  sync_config.json
config/: mto_config.json
docker/: Dockerfile  Dockerfile.dev
docs/: AI_TERMINAL_TASKS.md  API_FIELD_ANALYSIS.md  API_REFERENCE.md  CVM_DEPLOY_SCRIPTS.md  CVM_INFRASTRUCTURE.md  FEATURES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_CN.md  KINGDEE_PHOTO_ATTACHMENTS_2026-05-11.md  MATERIAL_CLASSIFICATION_FIELDS_2026-05-09.md  MTO_CONFIG_GUIDE.md  MTO_ORDER_TYPE_AND_SKU_READINESS_2026-05-29.md  PLAN-enhanced-column-resize.md  PLAN-fix-bidirectional-aux-fallback.md  PLAN-fix-cross-mto-aggregation.md  PLAN-fix-data-integrity-bugs-20260316.md  PLAN-fix-data-source-mismatches.md  PLAN_aux_match_visibility_2026-04-25.md  PLAN_cache_architecture_decision_2026-05-29.md  PLAN_chat_status_enum_2026-05-12.md  PLAN_close_status_2026-05-27.md  PLAN_deploy_infra_fix_2026-05-11.md  PLAN_dev_fixes_2026-05-29.md  PLAN_fix_baocai_routing_2026-05-22.md  PLAN_freshness_and_alerts_2026-05-29.md  PLAN_inventory_search_2026-05-28.md  PLAN_inventory_search_v2_2026-05-28.md  PLAN_llm_business_queries_20260211.md  PLAN_llm_chat_interface_20260211.md  PLAN_material_category_display_2026-05-09.md  PLAN_mto_ordertype_buildnow_2026-05-29.md  PLAN_photo_column_2026-05-11.md  PLAN_picking_unique_bill_no_2026-05-30.md  PLAN_pur_only_aux_lookup_2026-05-22.md  PLAN_saas_ui_restyle_2026-05-29.md  PLAN_stabilize_2026-05-29.md  PLAN_ui_fixes_2026-05-28.md  QUICKPULSE_MODIFICATION_GUIDE.md  (+11 more)
src/: config.py  (+5 more)
(+285 files in other folders)
